# verifiable-credential-toolkit

./: .gitignore  Cargo.toml  README.md  build.rs  private_key.pkcs8  public_key.pkcs8  verifiable_credential_toolkit.d.ts
.cargo/: config.toml
.github/workflows/: docs.yml  publish-npm.yml  rust.yml
examples/: full_workflow.rs  post_quantum.rs  schema_validation.rs
src/: crypto.rs  error.rs  lib.rs  wasm.rs
src/bindings/: cbor.rs  mod.rs  protobuf.rs
src/crypto/: ed25519.rs  mldsa.rs  mod.rs
src/proto_schemas/: mod.rs  vc.proto  vc.rs
test_data/: henryTrustPhone.json  henryTrustPhoneInvalid.json  unsigned_one_or_many.json
test_data/keys/: private_key.pkcs8
test_data/schemas/: schema.json  schema_fail.json
test_data/verifiable_credentials/: canonicalization.json  unsigned_one_or_many.json
tests/: bindings.rs  mod.rs  wasm.rs
tests/test_data/keys/: key.priv  key.pub  public_key.pkcs8
tests/test_data/keys/pem/: ed25519.priv.pem  ed25519.pub.pem  p256.priv.pem  p256.pub.pem  p384.priv.pem  p384.pub.pem
tests/test_data/schemas/: schema.json  schema_fail.json
tests/test_data/verifiable_credentials/: canonicalization.json  deserialize_invalid.json  invalid_vc.json  unsigned.json  unsigned_one_or_many.json  unsigned_validFrom_invalid.json  unsigned_validFrom_valid.json  unsigned_validUntil_invalid.json  unsigned_validUntil_valid.json  vc.json
wasm_js_example_usage/: index.html  index.js  index.ts  load_keys.mjs  package-lock.json  package.json  tsconfig.json
wasm_js_example_usage/fixtures/: unsigned_vc.cbor  unsigned_vc.pb
wasm_nodejs_example_usage/: index.js  index.ts  key_test.js  package-lock.json  package.json  tsconfig.json
