[package]
name = "verifiable-credential-toolkit"
version = "0.1.4"
description = "Provides methods for handling, constructing and signing Verifiable Credentials"
authors = ["Henry Pearson <henry@nquiringminds.com>"]
edition = "2021"
repository = "https://github.com/nqminds/verifiable-credential-toolkit"
readme = "README.md"
default-run = "vc_signer"
license = "Apache-2.0"
documentation = "https://docs.rs/verifiable-credential-toolkit/latest/verifiable_credential_toolkit/"


[dependencies]
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
chrono = { version = "0.4.39", features = ["serde"] }
serde_with = "3.12.0"
ring = "0.17.8"
base64 = "0.22.1"
jsonschema = "0.28.3"
reqwest = { version = "0.12.12", features = ["blocking"] }
url = { version = "2.5.4", features = ["serde"] }
clap = { version = "4.5.27", features = ["derive"] }
