[package]
name = "verifiable-credential-toolkit"
version = "0.5.1"
description = "Provides methods for handling, constructing and signing Verifiable Credentials"
authors = ["Henry Pearson <henry@nquiringminds.com>"]
edition = "2021"
repository = "https://github.com/nqminds/verifiable-credential-toolkit"
readme = "README.md"
default-run = "vc_signer"
license = "Apache-2.0"
documentation = "https://docs.rs/verifiable-credential-toolkit/latest/verifiable_credential_toolkit/"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
chrono = { version = "0.4.39", features = ["serde"] }
serde_with = "3.12.0"
ed25519-dalek = { version = "2.1.1", features = ["serde", "rand_core"] }
base64 = "0.22.1"
jsonschema = {version = "0.28.3", default-features = false}
reqwest = { version = "0.12.12", features = ["blocking"] }
url = { version = "2.5.4", features = ["serde"] }
clap = { version = "4.5.27", features = ["derive"] }
rand = "0.8"
wasm-bindgen-test = "0.3.50"
js-sys = "0.3.77"

[target.'cfg(target_family = "wasm")'.dependencies]
wasm-bindgen = { version = "0.2", features = ["serde"] }
serde-wasm-bindgen = "0.6.5"
reqwest = { version = "0.12.12", features = ["blocking"] }


[dependencies.getrandom]
version = "0.2.15"
features = ["js"]

