[package]
name = "verifiable-credential-toolkit"
version = "0.6.0"
description = "Provides methods for handling, constructing and signing Verifiable Credentials"
authors = ["Henry Pearson <henry@nquiringminds.com>"]
edition = "2021"
repository = "https://github.com/nqminds/verifiable-credential-toolkit"
readme = "README.md"
default-run = "vc_signer"
license = "Apache-2.0"
documentation = "https://docs.rs/verifiable-credential-toolkit/latest/verifiable_credential_toolkit/"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
chrono = { version = "0.4.39", features = ["serde"] }
serde_with = "3.12.0"
ed25519-dalek = { version = "2.1.1", features = ["serde", "rand_core"] }
base64 = "0.22.1"
jsonschema = { version = "0.28.3", default-features = false }
reqwest = { version = "0.12.12", features = ["blocking"] }
url = { version = "2.5.4", features = ["serde"] }
clap = { version = "4.5.27", features = ["derive"] }
rand = "0.8"
wasm-bindgen-test = "0.3.50"
js-sys = "0.3.77"
protobuf = "3.7.2"
protobuf-json-mapping = "3.7.2"
c2pa_cbor = "0.77.2"
thiserror = "2"
serde_jcs = "0.2.0"
ml-dsa = "0.1.1"
multibase = "0.9.2"
getrandom_v04 = { version = "0.4", package = "getrandom", features = ["sys_rng"] }

[target.'cfg(target_family = "wasm")'.dependencies]
wasm-bindgen = { version = "0.2", features = ["serde"] }
serde-wasm-bindgen = "0.6.5"
reqwest = { version = "0.12.12", features = ["blocking"] }
# ml-dsa pulls in getrandom 0.4 transitively; enable its wasm backend so the crate
# still compiles for wasm32 (rand 0.8 uses the separate getrandom 0.2 below).
getrandom_v04 = { package = "getrandom", version = "0.4", features = ["sys_rng", "wasm_js"] }


[dependencies.getrandom]
version = "0.2.15"
features = ["js"]

[build-dependencies]
protobuf-codegen = "3.7"
protoc-bin-vendored = "3"
